--- a/README.ipynb
+++ b/README.ipynb
@@ -34,7 +34,11 @@
     "\n",
     "Para configurar/instalar/usar o `speedtest-cli` no `Linux Ubuntu`, você pode usar o gerenciador de pacotes apt. Siga os passos abaixo:\n",
     "\n",
-    "1. Abra o `Terminal Emulator`. Você pode fazer isso pressionando: `Ctrl + Alt + T`\n"
+    "1. Abra o `Terminal Emulator`. Você pode fazer isso pressionando:\n",
+    "\n",
+    "    ```bash\n",
+    "    Ctrl + Alt + T\n",
+    "    ```\n"
    ]
   },
   {
@@ -43,22 +47,45 @@
    "source": [
     "2. Certifique-se de que seu sistema esteja limpo e atualizado.\n",
     "\n",
-    "    2.1 Limpar o `cache` do gerenciador de pacotes `apt`. Especificamente, ele remove todos os arquivos de pacotes (`.deb`) baixados pelo `apt` e armazenados em `/var/cache/apt/archives/`. Digite o seguinte comando: `sudo apt clean` \n",
-    "    \n",
-    "    2.2 Remover pacotes `.deb` antigos ou duplicados do cache local. É útil para liberar espaço, pois remove apenas os pacotes que não podem mais ser baixados (ou seja, versões antigas de pacotes que foram atualizados). Digite o seguinte comando: `sudo apt autoclean`\n",
+    "    2.1 Limpar o `cache` do gerenciador de pacotes `apt`. Especificamente, ele remove todos os arquivos de pacotes (`.deb`) baixados pelo `apt` e armazenados em `/var/cache/apt/archives/`. Digite o seguinte comando:\n",
+    "    ```bash\n",
+    "    sudo apt clean\n",
+    "    ```\n",
     "\n",
-    "    2.3 Remover pacotes que foram automaticamente instalados para satisfazer as dependências de outros pacotes e que não são mais necessários. Digite o seguinte comando: `sudo apt autoremove -y`\n",
+    "    2.2 Remover pacotes `.deb` antigos ou duplicados do `cache` local. É útil para liberar espaço, pois remove apenas os pacotes que não podem mais ser baixados (ou seja, versões antigas de pacotes que foram atualizados). Digite o seguinte comando:\n",
+    "    ```bash\n",
+    "    sudo apt autoclean\n",
+    "    ```\n",
     "\n",
-    "    2.4 Buscar as atualizações disponíveis para os pacotes que estão instalados em seu sistema. Digite o seguinte comando e pressione `Enter`: `sudo apt update`\n",
+    "    2.3 Remover pacotes que foram automaticamente instalados para satisfazer as dependências de outros pacotes e que não são mais necessários. Digite o seguinte comando:\n",
+    "    ```bash\n",
+    "    sudo apt autoremove -y\n",
+    "    ```\n",
     "\n",
-    "    2.5 **Corrigir pacotes quebrados**: Isso atualizará a lista de pacotes disponíveis e tentará corrigir pacotes quebrados ou com dependências ausentes: `sudo apt --fix-broken install`\n",
+    "    2.4 Buscar as atualizações disponíveis para os pacotes que estão instalados em seu sistema. Digite o seguinte comando e pressione `Enter`:\n",
+    "    ```bash\n",
+    "    sudo apt update\n",
+    "    ```\n",
     "\n",
-    "    2.6 Limpar o `cache` do gerenciador de pacotes `apt`. Especificamente, ele remove todos os arquivos de pacotes (`.deb`) baixados pelo `apt` e armazenados em `/var/cache/apt/archives/`. Digite o seguinte comando: `sudo apt clean` \n",
-    "    \n",
-    "    2.7 Para ver a lista de pacotes a serem atualizados, digite o seguinte comando e pressione `Enter`:  `sudo apt list --upgradable`\n",
+    "    2.5 **Corrigir pacotes quebrados**: Isso atualizará a lista de pacotes disponíveis e tentará corrigir pacotes quebrados ou com dependências ausentes:\n",
+    "    ```bash\n",
+    "    sudo apt --fix-broken install\n",
+    "    ```\n",
     "\n",
-    "    2.8 Realmente atualizar os pacotes instalados para as suas versões mais recentes, com base na última vez que você executou `sudo apt update`. Digite o seguinte comando e pressione `Enter`: `sudo apt full-upgrade -y`\n",
-    "    "
+    "    2.6 Limpar o `cache` do gerenciador de pacotes `apt` novamente:\n",
+    "    ```bash\n",
+    "    sudo apt clean\n",
+    "    ```\n",
+    "\n",
+    "    2.7 Para ver a lista de pacotes a serem atualizados, digite o seguinte comando e pressione `Enter`:\n",
+    "    ```bash\n",
+    "    sudo apt list --upgradable\n",
+    "    ```\n",
+    "\n",
+    "    2.8 Realmente atualizar os pacotes instalados para as suas versões mais recentes, com base na última vez que você executou `sudo apt update`. Digite o seguinte comando e pressione `Enter`:\n",
+    "    ```bash\n",
+    "    sudo apt full-upgrade -y\n",
+    "    ```"
    ]
   },
   {
@@ -67,9 +94,17 @@
    "source": [
     "Para instalar o `speedtest-cli` no `Linux Ubuntu` utilizando o `Terminal Emulator`, você pode seguir estes passos:\n",
     "\n",
-    "1. **Instale o `speedtest-cli`**: Agora, você pode instalar o `speedtest-cli` usando o gerenciador de pacotes `apt` com o comando: `sudo apt install speedtest-cli -y`\n",
+    "1. **Instale o `speedtest-cli`**: Agora, você pode instalar o `speedtest-cli` usando o gerenciador de pacotes `apt` com o comando:\n",
     "\n",
-    "2. **Verifique a instalação**: Após a instalação, você pode verificar se o `speedtest-cli` foi instalado corretamente e está funcionando usando o comando: `speedtest-cli --version`\n",
+    "    ```bash\n",
+    "    sudo apt install speedtest-cli -y\n",
+    "    ```\n",
+    "\n",
+    "2. **Verifique a instalação**: Após a instalação, você pode verificar se o `speedtest-cli` foi instalado corretamente e está funcionando usando o comando:\n",
+    "\n",
+    "    ```bash\n",
+    "    speedtest-cli --version\n",
+    "    ```\n",
     "\n",
     "    Esse comando irá retornar a versão do `speedtest-cli` instalada, confirmando que a instalação foi bem-sucedida.\n",
     "\n",
@@ -86,11 +121,15 @@
     "\n",
     "Para configurar/instalar/usar o `postfix` no `Linux Ubuntu` sem precisar digitar linha por linha, você pode seguir estas etapas:\n",
     "\n",
-    "1. Abra o `Terminal Emulator`. Você pode fazer isso pressionando: `Ctrl + Alt + T`\n",
+    "1. Abra o `Terminal Emulator`. Você pode fazer isso pressionando:\n",
+    "\n",
+    "    ```bash\n",
+    "    Ctrl + Alt + T\n",
+    "    ```\n",
     "\n",
     "2. Digite o seguinte comando e pressione `Enter`:\n",
     "\n",
-    "    ```\n",
+    "    ```bash\n",
     "    sudo apt clean\n",
     "    sudo apt autoclean\n",
     "    sudo apt autoremove -y\n",
@@ -116,9 +155,17 @@
     "\n",
     "Para compartilhar os resultados do teste de velocidade feito com o `speedtest-cli` de uma forma visual, você pode usar a opção `--share`. Isso gera um _link_ para uma imagem que contém os resultados do teste de velocidade. Para fazer isso, siga os seguintes passos:\n",
     "\n",
-    "1. **Abra o `Terminal Emulator`**: Caso ainda não esteja aberto, você pode iniciá-lo com: `Ctrl+Alt+T`\n",
+    "1. **Abra o `Terminal Emulator`**: Caso ainda não esteja aberto, você pode iniciá-lo com:\n",
     "\n",
-    "2. **Execute o `Speedtest` com a opção de compartilhamento**: `speedtest-cli --share`\n",
+    "    ```bash\n",
+    "    Ctrl+Alt+T\n",
+    "    ```\n",
+    "\n",
+    "2. **Execute o `Speedtest` com a opção de compartilhamento**:\n",
+    "\n",
+    "    ```bash\n",
+    "    speedtest-cli --share\n",
+    "    ```\n",
     "\n",
     "3. Aguarde o teste concluir: O teste de velocidade será realizado e, no final, o `speedtest-cli` fornecerá um URL para uma imagem que contém um resumo dos resultados, incluindo `ping`, velocidade de _download_ e _upload_.\n",
     "\n",
@@ -137,7 +184,7 @@
    "source": [
     "## Referências\n",
     "\n",
-    "[1] OPENAI. ***Instalar speedtest-cli ubuntu.*** Disponível em: <https://chatgpt.com/c/aad827a9-5cf1-4a30-972f-a57c56377010> (texto adaptado). ChatGPT. Acessado em: 08/08/2024 10:24.\n",
+    "[1] OPENAI. ***Instalar o `speedtest-cli` no `linux ubuntu` pelo `terminal emulator`.*** Disponível em: <https://chatgpt.com/c/aad827a9-5cf1-4a30-972f-a57c56377010> (texto adaptado). ChatGPT. Acessado em: 08/08/2024 10:24.\n",
     "\n",
     "[2] OPENAI. ***Vs code: editor popular.*** Disponível em: <https://chat.openai.com/c/b640a25d-f8e3-4922-8a3b-ed74a2657e42> (texto adaptado). ChatGPT. Acessado em: 08/08/2024 10:06.\n"
    ]
